feat(sessions): allow permanent session deletion
